Bepro 1978 change network and bounty routes to marketplace and tasks (#250)
* adding new redirects to next.config

* changing bounties to tasks

* chaging my-network to my-marketplace

* changing new-network to new-marketplace

* adjusting profile-router

* changing new-network path to new-marketplace

* changing path my-network to my-marketplace

* adding redirect create-bounty

* changing create-bounty to create-task

* changing paste page/bounty to page/task

* adding redirect /bounty/:id to /task/:id

* changing /bounty/id to /task/id

* adding new redirects in task page

* changing api/issue to api/task

* changing migration /bounty/ to /task/

* changing route issue to task

* changing endpoints network to marketplace

* changing overview/network to overview/marketplace

* adjusting imports api/hooks

* adjusting administration component to marketplaces

* adjusting setup component to marketplaces

* adjusting use-network to replace marketplaces

* adjusting search/networks to search/marketplaces

* changing bounties to tasks in navigation-links

* changing bounties to tasks profile/page
